force-app/main/default/objects/Genesys_Cloud_Error__c/Genesys_Cloud_Error__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud連携エラー</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Genesys Cloud連携エラーNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>