force-app/main/default/objects/Genesys_Cloud_Error__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>APIコールアウト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>