force-app/main/default/objects/Genesys_Cloud_Error__c/fields/defaultException__c.field-meta.xml
<CustomField>
    <fullName>defaultException__c</fullName>
    <label>defaultException</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>