force-app/main/default/objects/Genesys_Cloud_Error__c/fields/requestBody__c.field-meta.xml
<CustomField>
    <fullName>requestBody__c</fullName>
    <label>リクエストBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>