force-app/main/default/objects/Genesys_Cloud_Error__c/fields/responseCode__c.field-meta.xml
<CustomField>
    <fullName>responseCode__c</fullName>
    <label>responseCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>