force-app/main/default/objects/Genesys_Cloud_Error__c/listViews/X00.listView-meta.xml
<ListView>
    <fullName>X00</fullName>
    <columns>NAME</columns>
    <columns>APIName__c</columns>
    <columns>requestBody__c</columns>
    <columns>responseCode__c</columns>
    <columns>defaultException__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>00.すべてのデータ</label>
</ListView>